_sass/_lessons.scss
/* helper mixins */
@mixin bookmark($level) {
  @include mq(print) {
    bookmark-level: $level;
    bookmark-state: closed;
  }
}

@mixin offset-column-print-and-sm($offset, $width) {
  @include make-column(sm, $width);
  @include make-column-offset(sm, $offset);
  @include make-column(print, $width);
  @include make-column-offset(print, $offset);
}

.lesson {

  /* convenience classes for lesson authors/editors to use */
  .fig-50 > * { width: 50%; margin: 0 auto; }
  .fig-25 > * { width: 25%; margin: 0 auto; }

  .two-up,
  .three-up,
  .four-up {
    & > :first-child { padding-left: 0; }
    & > :last-child { padding-right: 0; }
  }
  .two-up > * {
    @include make-column(print, 6);
    @include make-column(sm, 6);
  }
  .three-up > * {
    @include make-column(print, 4);
    @include make-column(sm, 4);
  }
  .four-up > * {
    @include make-column(print, 3);
    @include make-column(sm, 3);
  }

  em.vocab {
    font-weight: bold;
    font-style: normal;
  }

  .new-page {
    @include mq(print) {
      display: block;
      page-break-before: always !important;
    }
  }

  .new-column {
    @include mq(print) {
      column-break-before: always;
    }
  }

  .allow-break {
    page-break-inside: auto !important;
  }

  ul.horizontal {
    text-align: center;
    li {
      display: inline-block;
      & + li {
        margin-left: $gutter-sm;
        @include mq(print) { margin-left: $gutter-print; }
        margin-top: 0;
      }
    }
  }

  ul.bulleted {
    list-style-type: disc;
  }

  ol.subparts {
    list-style-type: lower-roman
  }

  table.vertical-headers {
    table-layout: fixed;
    th {
      text-align:center;
      white-space:nowrap;
      transform-origin:50% 50%;
      transform: rotate(-90deg);

      p {
        margin: 0 -100%;
        display: inline-block;
        &:before {
          content:'';
          width:0;
          padding-top:105%;/* takes width as reference, + 10% for faking some extra padding */
          display:inline-block;
          vertical-align:middle;
        }
      }
    }
  }

  /* --- end convenience classes --- */

  /* problem counter */
  counter-reset: problem;

  /* extra line of space for a problem that follows other content */
  * + .problem {
    margin-top: lines(2);
  }

  /* right-align and size the headings */
  h1,
  h2 {
    text-align: right;
    font-size: 2em;
    @include mq(sm, print) { font-size: 3em; }
  }

  /* main lesson title */
  h1 {
    padding: 0;
    margin-bottom: 1em;

    @include bookmark(1);
  }

  /* subheadings for sections within lesson (Introduction, Development, etc.) */
  h2 { @include bookmark(2); }

  /* a problem (see below for section-specific styling) */
  .problem {
    counter-increment: problem;
    counter-reset: part;

    /* don't break up problems */
    page-break-inside: avoid;

    /* problem numbers and problem parts */
    position: relative;
    &:before {
      content: counter(problem);
      font-family: $font-family-text;
      color: $grey-color;
      line-height: 1;
      font-size: 2.5em;
      padding-right: .25em;

      @include mq(sm, print) {
        float: none;
        display: inline-block;
        width: 100px;
        margin-left: -100px;
        font-size: 3.5em;
        text-align: right;
      }
    }
    /* move the problem content up, relative to the problem number */
    @include mq(sm, print) {
      & > *:first-child {
        margin-top: -2.33em;
      }
    }

    .problem-part {
      text-indent: -1em;
      counter-reset: subpart;
      counter-increment: part;
      &:before {
        content: counter(part, lower-alpha) ". ";
        @include mq(print) { page-break-after: avoid; }
      }
    }
  }


  /* the Development (and Intro and Practice) section */
  .development {
    @include make-row();

    h2 { @include offset-column-print-and-sm(0, 10.5); }
    & > * { @include offset-column-print-and-sm(1.5, 9); }
    & > .problem { @include offset-column-print-and-sm(2.5, 8); }
  }

  /* the Problems (and Exploring in Depth) section */
  .problems {
    @include make-row();

    & > * {
      @include make-column(sm,6);
      @include make-column(print, 12);
      margin-top: lines(1);
    }
    & > .problem {
      @include make-column(sm,5);
      @include make-column-offset(sm,1);
      @include make-column(print, 10);
      @include make-column-offset(print, 2);
      margin-top: lines(2);
    }

    @include mq(print) {
      page-break-before: always;
      column-count: 2;
      -webkit-column-count: 2;
      column-fill: auto;
      &:after {
        column-break-after: always;
      }
    }

    /* Problems heading */
    h2:first-of-type {
      @include make-column(sm,12);

      text-align: left;
      color: $grey-color-light;
      font-weight: 700;
      font-size: 2.5em;
      @include mq(sm, print) {
        font-size: 4em;

        /* reset from the make-column layout above */
        margin-top: 0;
        padding: 0;
        float: none;
        width: 100%;

        column-span: all;
      }
    }

    /* Exploring in Depth heading */
    h2:nth-of-type(2) {
      @include make-column(sm,6);
      @include make-column-offset(sm,6);
      @include mq(print) {
        /* reset from the make-column layout above */
        padding: 0;
        float: none;
        width: 100%;
        word-spacing: 20em;
      }
    }

    /* center figures by default within problems section. */
    figure {
      margin: 0 auto lines(1) auto;
    }
  }


  @include mq(print) {
    h1,h2 {
      page-break-after: avoid;
    }
    .problem-part { page-break-inside: avoid; }
  }
}

